--- a/hairista/Info.plist
+++ b/hairista/Info.plist
@@ -36,8 +36,15 @@
 			</dict>
 		</array>
 	</dict>
+	<key>ImgurAnonymousAPIClientID</key>
+	<string>144ed71060cd689</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSCameraUsageDescription</key>
 	<string>take photo</string>
 	<key>NSLocationUsageDescription</key>
@@ -99,7 +106,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>ImgurAnonymousAPIClientID</key>
-	<string>144ed71060cd689</string>
 </dict>
 </plist>
