--- a/hairista/Info.plist
+++ b/hairista/Info.plist
@@ -46,13 +46,13 @@
 		<true/>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>take photo</string>
+	<string>Để bạn có thể chụp hình ảnh</string>
 	<key>NSLocationUsageDescription</key>
-	<string>Test</string>
+	<string>Để có thể lấy vị trí của bạn</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Test</string>
+	<string>Để có thể lấy vị trí của bạn</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>take photo</string>
+	<string>Để bạn có thể chọn hình ảnh</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>LATINWD.TTF</string>
